--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -36,13 +36,16 @@ opencv-python==4.10.0.84
 tiktoken==0.7.0
 duckdb==1.1.2
 
+# TQDM
+tqdm
+
 # Pyarrow
 pyarrow==16.0.0
 # Ray
 ray[data, client]==2.34.0
 
 # Lance
-lancedb>=0.6.10
+pylance>=0.10.12
 
 #Iceberg
 pyiceberg==0.7.0
