--- a/.github/workflows/nightly-publish-s3.yml
+++ b/.github/workflows/nightly-publish-s3.yml
@@ -265,7 +265,7 @@ jobs:
     name: Send Slack notification on failure
     runs-on: ubuntu-latest
     needs: benchmark-local-tpch
-    if: ${{ failure() }}
+    if: ${{ failure() && (github.ref == 'refs/heads/main') }}
 
     steps:
     - uses: slackapi/slack-github-action@v2.0.0
@@ -278,6 +278,37 @@ jobs:
                 "text": {
                   "type": "mrkdwn",
                   "text": ":rotating_light: [CI] Local TPC-H benchmarks on nightly wheel <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|workflow> *FAILED* :rotating_light:"
+                }
+              }
+            ]
+          }
+        webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+        webhook-type: incoming-webhook
+
+  benchmark-distributed-tpch:
+    needs: [publish]
+    uses: ./.github/workflows/benchmark-distributed-tpch.yml
+    with:
+      daft_index_url: https://d1p3klp2t5517h.cloudfront.net/builds/nightly
+    secrets: inherit
+
+  on-distributed-tpch-failure:
+    name: Send Slack notification on failure
+    runs-on: ubuntu-latest
+    needs: benchmark-local-tpch
+    if: ${{ failure() && (github.ref == 'refs/heads/main') }}
+
+    steps:
+    - uses: slackapi/slack-github-action@v2.0.0
+      with:
+        payload: |
+          {
+            "blocks": [
+              {
+                "type": "section",
+                "text": {
+                  "type": "mrkdwn",
+                  "text": ":rotating_light: [CI] Distributed TPC-H benchmarks on nightly wheel <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|workflow> *FAILED* :rotating_light:"
                 }
               }
             ]
