--- a/.github/workflows/benchmark-distributed-tpch.yml
+++ b/.github/workflows/benchmark-distributed-tpch.yml
@@ -79,7 +79,7 @@ jobs:
       run: |
         rm -rf daft
         uv pip install daft --pre --extra-index-url ${{ env.DAFT_INDEX_URL }}
-        uv pip install gspread ray[default]
+        uv pip install gspread ray[default] boto3
     - name: Write service account secret file
       run: |
         mkdir -p ~/.config/gspread
