--- a/.github/workflows/benchmark-distributed-tpch.yml
+++ b/.github/workflows/benchmark-distributed-tpch.yml
@@ -103,6 +103,12 @@ jobs:
     - name: Run benchmark and upload results to Google Sheets
       run: PYTHONPATH=. python .github/ci-scripts/distributed_tpch.py
 
+    - name: Upload traces
+      uses: actions/upload-artifact@v4
+      with:
+        name: traces
+        path: traces
+
     - name: Spin down ray cluster
       if: always()
       run: ray down ray.yaml -y
