docs: initializes sql and data type documentation (#3959)
This PR introduces some SQL docs,

* SQL Reference section with 'Introduction' page
* SQL Statements SELECT and USE
* DataTypes <-- main contribution of this PR IMO

This PR introduces some design tweaks,

* No depth on nav (remove integrated toc)
* Use right-hand-side toc with depth 3 (seems reasonable)
* Use 100% for table width which makes tables much more uniform

https://www.getdaft.io/projects/docs/en/rchowell-sql-docs/sql/datatypes/

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -22,6 +22,12 @@ nav:
   - Installation: install.md
   - Quickstart: quickstart.md
   - Core Concepts: core_concepts.md
+  - SQL Reference:
+    - Overview: sql/overview.md
+    - Statements:
+      - SELECT: sql/statements/select.md
+      - USE: sql/statements/use.md
+    - Data Types: sql/datatypes.md
   - Sessions: sessions.md
   - Catalogs: catalogs.md
   - Spark Connect: spark_connect.md
