--- a/.github/workflows/benchmark-distributed-tpch.yml
+++ b/.github/workflows/benchmark-distributed-tpch.yml
@@ -93,7 +93,7 @@ jobs:
     - name: Download private ssh key
       run: |
         KEY=$(aws secretsmanager get-secret-value --secret-id ci-github-actions-ray-cluster-key-3 --query SecretString --output text)
-        echo "$KEY" >> ~/.ssh/ci-github-actions-ray-cluster-key.pem
+        echo "$KEY" > ~/.ssh/ci-github-actions-ray-cluster-key.pem
         chmod 600 ~/.ssh/ci-github-actions-ray-cluster-key.pem
     - name: Spin up and connect to ray cluster
       run: |
@@ -102,6 +102,12 @@ jobs:
 
     - name: Run benchmark and upload results to Google Sheets
       run: PYTHONPATH=. python .github/ci-scripts/distributed_tpch.py
+
+    - name: Upload traces
+      uses: actions/upload-artifact@v4
+      with:
+        name: traces
+        path: traces
 
     - name: Spin down ray cluster
       if: always()
