--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -61,6 +61,8 @@ theme:
   locale: en
   logo: img/daft.png
   favicon: img/favicon.png
+  font:
+    text: Oxygen
   features:
   - navigation.footer
   - search.suggest
@@ -146,7 +148,7 @@ extra_css:
 markdown_extensions:
 - admonition
 - toc:
-    toc_depth: 3
+    toc_depth: 2
     permalink: "#"
 - pymdownx.tabbed:
     alternate_style: true
