wip api docs, can generate full docstring

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -53,7 +53,9 @@ nav:
     - Telemetry: resources/telemetry.md
   - Migration Guide:
     - Coming from Dask: migration/dask_migration.md
-- API Docs: api_docs/index.html
+- API Docs:
+  - Overview: api_docs/index.md
+  - DataFrame: api_docs/dataframe.md
 
 # Configuration
 theme:
@@ -64,13 +66,13 @@ theme:
   font:
     text: Oxygen
   features:
-  - navigation.footer
   - search.suggest
   - search.highlight
   - content.code.copy   # add copy button to code sections
   - content.tabs.link   # If one tab switches Python to SQL, all tabs switch
   - toc.follow
   - toc.integrate   # adds page subsections to left-hand menu (instead of right-hand menu)
+  - navigation.footer
   - navigation.tracking   # url in address bar is automatically updated with active anchor as highlighted in TOC
   - navigation.tabs   # moves nav bar to top, with secondary left-hand menu
   - navigation.tabs.sticky   # top nav bar remains visible when scrolling down
@@ -158,7 +160,6 @@ markdown_extensions:
       # dedent_subsections: true
 - pymdownx.superfences
 - pymdownx.details
-  # - pymdownx.blocks.admonition
 - attr_list
 - md_in_html
 - pymdownx.emoji:
@@ -174,10 +175,54 @@ plugins:
 - search:
     separator: '[\s\u200b\-_,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
 - macros
-- mkdocs-simple-hooks:
-    hooks:
-      on_pre_build: "docs.hooks:make_api_docs"
+# - mkdocs-simple-hooks:
+#     hooks:
+#       on_pre_build: "docs.hooks:make_api_docs"
 # - social:
 #     cards_layout_options:
 #       background_color: "#532687"
 #     cards_dir: social
+# - mkdocstrings: # clean up
+#     handlers:
+#       python:
+#         selection:
+#           docstring_style: google
+#         rendering:
+#           show_source: true
+#           show_category_heading: true
+#           show_if_no_docstring: false
+- mkdocstrings:
+    handlers:
+      python:
+        options:
+          # backlinks: tree
+          docstring_style: google
+          # docstring_options:
+          #   ignore_init_summary: true
+          docstring_section_style: spacy
+          # filters: ["!^_"]
+          heading_level: 2
+          # inherited_members: true
+          # merge_init_into_class: true
+          # preload_modules: [mkdocstrings]
+          # relative_crossrefs: true
+          # scoped_crossrefs: true
+          separate_signature: true
+          # show_bases: false
+          # show_inheritance_diagram: true
+          show_root_heading: true
+          show_root_full_path: false
+          show_signature_annotations: true
+          # show_source: false
+          show_symbol_type_heading: true
+          show_symbol_type_toc: true
+          signature_crossrefs: true
+          # summary: true
+          unwrap_annotated: true
+          show_if_no_docstring: true
+          members_order: source
+          show_docstring_examples: true
+- mike:
+    # Version provider for documentation
+    version_selector: true
+    canonical_version: latest
