--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -17,3 +17,7 @@ mkdocs-macros-plugin
 mkdocs-simple-hooks
 pymdown-extensions
 mkdocs-material[imaging]
+
+# wip
+mkdocstrings-python
+ruff # for mkdocstring formatting
