docs: change all mentions of getdaft -> daft

--- a/.github/assets/tpch-bench.yaml
+++ b/.github/assets/tpch-bench.yaml
@@ -45,4 +45,4 @@ setup_commands:
 - echo "source ~/.venv/bin/activate" >> ~/.bashrc
 - source .venv/bin/activate
 - uv pip install pip ray[default] --no-progress
-- uv pip install getdaft --no-progress --pre --extra-index-url ${DAFT_INDEX_URL}
+- uv pip install daft --no-progress --pre --extra-index-url ${DAFT_INDEX_URL}
