--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -22,14 +22,14 @@ jobs:
       arch: ${{ matrix.arch }}
       lts: ${{ matrix.lts }}
       build_type: release
-      use_new_name: ${{ matrix.use_new_name }}
+      use_old_name: ${{ matrix.use_old_name }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu, macos, windows]
         arch: [x86_64, aarch64]
         lts: [false, true]
-        use_new_name: [false, true]
+        use_old_name: [false, true]
 
         exclude:
         - os: windows
@@ -37,7 +37,7 @@ jobs:
         - lts: true
           arch: aarch64
         - lts: true
-          use_new_name: true
+          use_old_name: false
 
   publish:
     name: Publish wheels to PyPI
