--- a/.github/workflows/publish-dev-s3.yml
+++ b/.github/workflows/publish-dev-s3.yml
@@ -34,7 +34,7 @@ jobs:
         OBJECT_EXISTS=$(aws s3api head-object --bucket github-actions-artifacts-bucket --key ${{ env.S3_KEY }}/index.html > /dev/null 2>&1 && echo "true" || echo "false")
         if [[ "$OBJECT_EXISTS" = "true" ]]; then
           echo "Package already exists for this commit, skipping publish. To install, run:"
-          echo "pip install getdaft --pre --extra-index-url https://d1p3klp2t5517h.cloudfront.net/${{ env.S3_KEY }}"
+          echo "pip install daft --pre --extra-index-url https://d1p3klp2t5517h.cloudfront.net/${{ env.S3_KEY }}"
         fi
 
         echo "build_exists=$OBJECT_EXISTS" >> "$GITHUB_OUTPUT"
@@ -49,14 +49,14 @@ jobs:
       arch: ${{ matrix.arch }}
       lts: ${{ matrix.lts }}
       build_type: release
-      use_new_name: ${{ matrix.use_new_name }}
+      use_old_name: ${{ matrix.use_old_name }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu]
         arch: [x86_64, aarch64]
         lts: [false]
-        use_new_name: [false, true]
+        use_old_name: [false, true]
 
   publish:
     name: Publish wheels to S3
@@ -98,4 +98,4 @@ jobs:
     - name: Print install instructions
       run: |
         echo "To install the dev build, run:"
-        echo "pip install getdaft --pre --extra-index-url https://d1p3klp2t5517h.cloudfront.net/${{ env.S3_KEY }}"
+        echo "pip install daft --pre --extra-index-url https://d1p3klp2t5517h.cloudfront.net/${{ env.S3_KEY }}"
