feat: Flight shuffle (#3904)
New shuffle implementation. 

**How it works**
- Spin up a shuffle actor per node
- Shuffle actor partitions input and writes to disk.
- Shuffle actor spins up flight servers.
- Spin up reduce tasks, 2x number of shuffle actors (for now, need to
test more once we move it into rust)
- Reduce tasks make flight get requests to the shuffle actors.
- Reduce tasks yield reduced partitions to ray as they are ready.

**Notes**
- Partitioning and writing is done in Rust via the new `ShuffleCache`
abstraction. In the future this can also hold partitions in memory if
possible, before writing.
- I also implemented IPC writer in rust.
- Instead of partitioner tokio tasks in rust, I do them in a
`py.allow_threads` function, together with a threadpool executor in
python. I found this implementation to be faster.

**Results**

Compared with https://github.com/Eventual-Inc/Daft/pull/3877

Question | Before (s) | After (s) | Difference (s) | % Change
-- | -- | -- | -- | --
1 | 28.07 | 31.58 | 3.51 | 12.50%
2 | 28.16 | 43.39 | 15.23 | 54.08%
3 | 39.94 | 35.78 | -4.16 | -10.42%
4 | 19.71 | 23.63 | 3.92 | 19.89%
5 | 109.42 | 76.53 | -32.89 | -30.06%
6 | 10.52 | 10.86 | 0.34 | 3.23%
7 | 51.12 | 43.65 | -7.47 | -14.61%
8 | 125.38 | 80.40 | -44.98 | -35.87%
9 | 272.71 | 115.04 | -157.67 | -57.82%
10 | 41.46 | 40.85 | -0.61 | -1.47%
11 | 23.63 | 27.88 | 4.25 | 17.99%
12 | 26.74 | 24.63 | -2.11 | -7.89%
13 | 34.98 | 33.76 | -1.22 | -3.49%
14 | 15.30 | 17.18 | 1.88 | 12.29%
15 | 35.90 | 38.31 | 2.41 | 6.71%
16 | 14.10 | 15.38 | 1.28 | 9.08%
17 | 127.27 | 113.43 | -13.84 | -10.87%
18 | 73.91 | 62.07 | -11.84 | -16.02%
19 | 20.56 | 22.01 | 1.45 | 7.05%
20 | 44.83 | 51.93 | 7.10 | 15.84%
21 | 417.34 | 400.44 | -16.90 | -4.05%
22 | 12.28 | 12.98 | 0.70 | 5.70%
Total | 1573.33 | 1321.71 | -251.62 | -15.99%

**Todos:**
- [ ] Open telemetry
- [ ] Per partition stats (in memory size bytes, on disk size bytes, num
rows)
- [ ] Integrate into AQE rules (thinking of breaking 

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ daft-recordbatch = {path = "src/daft-recordbatch", default-features = false}
 daft-scan = {path = "src/daft-scan", default-features = false}
 daft-scheduler = {path = "src/daft-scheduler", default-features = false}
 daft-session = {path = "src/daft-session", default-features = false}
+daft-shuffles = {path = "src/daft-shuffles", default-features = false}
 daft-sql = {path = "src/daft-sql", default-features = false}
 daft-stats = {path = "src/daft-stats", default-features = false}
 daft-warc = {path = "src/daft-warc", default-features = false}
@@ -81,6 +82,7 @@ python = [
   "daft-scheduler/python",
   "daft-sql/python",
   "daft-session/python",
+  "daft-shuffles/python",
   "daft-stats/python",
   "daft-recordbatch/python",
   "daft-writers/python"
@@ -172,6 +174,7 @@ members = [
   "src/daft-scan",
   "src/daft-scheduler",
   "src/daft-session",
+  "src/daft-shuffles",
   "src/daft-sketch",
   "src/daft-sql",
   "src/daft-recordbatch",
