--- a/src/daft-shuffles/Cargo.toml
+++ b/src/daft-shuffles/Cargo.toml
@@ -1,6 +1,11 @@
 [dependencies]
+arrow-flight = "54.0.0"
+arrow-ipc = "54.2.1"
+arrow2 = {workspace = true, features = ["io_flight", "io_ipc_read_async"]}
+async-stream = {workspace = true}
 common-error = {path = "../common/error", default-features = false}
 common-runtime = {path = "../common/runtime", default-features = false}
+daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
 daft-io = {path = "../daft-io", default-features = false}
 daft-micropartition = {path = "../daft-micropartition", default-features = false}
@@ -8,8 +13,12 @@ daft-recordbatch = {path = "../daft-recordbatch", default-features = false}
 daft-schema = {path = "../daft-schema", default-features = false}
 daft-writers = {path = "../daft-writers", default-features = false}
 futures = {workspace = true}
-pyo3 = {workspace = true, optional = true}
+pyo3 = {workspace = true, optional = true, features = ["experimental-async"]}
 tokio = {workspace = true}
+tonic = "0.12.3"
+tracing = {workspace = true}
+tracing-chrome = "0.7.2"
+tracing-subscriber = "0.3"
 
 [features]
 python = [
