feat(sql): adds show statement and documentation

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
     - Overview: sql/overview.md
     - Statements:
       - SELECT: sql/statements/select.md
+      - SHOW: sql/statements/show.md
       - USE: sql/statements/use.md
     - Data Types: sql/datatypes.md
   - Sessions: sessions.md
