--- a/src/daft-scan/Cargo.toml
+++ b/src/daft-scan/Cargo.toml
@@ -33,7 +33,19 @@ urlencoding = "2.1.3"
 tokio = {workspace = true, features = ["full"]}
 
 [features]
-python = ["dep:pyo3", "common-error/python", "daft-core/python", "daft-logical-plan/python", "daft-recordbatch/python", "daft-stats/python", "common-file-formats/python", "common-io-config/python", "common-daft-config/python", "common-scan-info/python", "daft-schema/python"]
+python = [
+  "dep:pyo3",
+  "common-error/python",
+  "daft-core/python",
+  "daft-logical-plan/python",
+  "daft-recordbatch/python",
+  "daft-schema/python",
+  "daft-stats/python",
+  "common-file-formats/python",
+  "common-io-config/python",
+  "common-daft-config/python",
+  "common-scan-info/python"
+]
 
 [lints]
 workspace = true
