docs: change all mentions of getdaft -> daft (#3986)
## Summary

Change all instances of getdaft to daft where appropriate

## Related Issues

#3913 

## Changes Made

I went through to cleanup all instances of:

1. `"getdaft*` - places in the code where we use Python strings to
reference the package
2. `getdaft[` places in the code where we potentially use the getdaft
with extras
3. `install getdaft` places in the code where we do pip installations
4. `getdaft` just a general visual audit of where we use the `getdaft`
still

After this, the search for `getdaft(?!\.)` (any instances of `getdaft`
that isn't suffixed with a `.` -- this helps sift through everything
that isn't a mention of our website which is still getdaft.io) turns up
only expected results.

## Tests

Action for builds:
https://github.com/Eventual-Inc/Daft/actions/runs/13863156729

## Checklist

- [ ] All tests have passed
- [ ] Documented in API Docs
- [ ] Documented in User Guide
- [ ] If adding a new documentation page, doc is added to
`docs/mkdocs.yml` navigation
- [ ] Documentation builds and is formatted properly (tag
[@ccmao1130](https://github.com/ccmao1130) for docs review)

--- a/.github/workflows/nightly-publish-s3.yml
+++ b/.github/workflows/nightly-publish-s3.yml
@@ -30,14 +30,14 @@ jobs:
       arch: ${{ matrix.arch }}
       lts: ${{ matrix.lts }}
       build_type: release
-      use_new_name: ${{ matrix.use_new_name }}
+      use_old_name: ${{ matrix.use_old_name }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu, macos, windows]
         arch: [x86_64, aarch64]
         lts: [false, true]
-        use_new_name: [false, true]
+        use_old_name: [false, true]
 
         exclude:
         - os: windows
@@ -45,7 +45,7 @@ jobs:
         - lts: true
           arch: aarch64
         - lts: true
-          use_new_name: true
+          use_old_name: false
 
   publish:
     name: Publish wheels to S3
@@ -86,7 +86,7 @@ jobs:
     - name: Print install instructions
       run: |
         echo "To install the nightly build, run:"
-        echo "pip install getdaft --pre --extra-index-url https://d1p3klp2t5517h.cloudfront.net/builds/nightly"
+        echo "pip install daft --pre --extra-index-url https://d1p3klp2t5517h.cloudfront.net/builds/nightly"
 
   on-failure:
     name: Send Slack notification on failure
@@ -117,7 +117,7 @@ jobs:
     runs-on: ${{ matrix.runner-name }}
     timeout-minutes: 15
     env:
-      package-name: getdaft
+      package-name: daft
     strategy:
       fail-fast: false
       matrix:
@@ -142,7 +142,7 @@ jobs:
 
     - name: Install Daft and dev dependencies
       run: |
-        uv pip install -r requirements-dev.txt getdaft --pre --extra-index-url https://d1p3klp2t5517h.cloudfront.net/builds/nightly --force-reinstall
+        uv pip install -r requirements-dev.txt daft --pre --extra-index-url https://d1p3klp2t5517h.cloudfront.net/builds/nightly --force-reinstall
         rm -rf daft
     - uses: actions/cache@v4
       env:
@@ -181,7 +181,7 @@ jobs:
     runs-on: ${{ matrix.runner-name }}
     timeout-minutes: 30
     env:
-      package-name: getdaft
+      package-name: daft
     strategy:
       fail-fast: false
       matrix:
@@ -213,7 +213,7 @@ jobs:
         echo "$GITHUB_WORKSPACE/venv/bin" >> $GITHUB_PATH
     - name: Install Daft and dev dependencies
       run: |
-        uv pip install -r requirements-dev.txt getdaft --pre --extra-index-url https://d1p3klp2t5517h.cloudfront.net/builds/nightly --force-reinstall
+        uv pip install -r requirements-dev.txt daft --pre --extra-index-url https://d1p3klp2t5517h.cloudfront.net/builds/nightly --force-reinstall
         rm -rf daft
     - name: Prepare tmpdirs for IO services
       run: |
