--- a/src/daft-cli/Cargo.toml
+++ b/src/daft-cli/Cargo.toml
@@ -1,11 +1,11 @@
 [dependencies]
-clap = {version = "4.4", features = ["derive"]}
-daft-dashboard = {path = "../daft-dashboard"}
+clap = {version = "4.4", features = ["derive"], optional = true}
+daft-dashboard = {path = "../daft-dashboard", optional = true}
 pyo3 = {workspace = true, optional = true}
 
 [features]
-default = ["dep:pyo3"]
-python = ["dep:pyo3"]
+default = ["python"]
+python = ["dep:pyo3", "dep:clap", "dep:daft-dashboard"]
 
 [package]
 name = "daft-cli"
