--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -46,6 +46,7 @@ nav:
     - Amazon Web Services: integrations/aws.md
     - SQL: integrations/sql.md
     - Hugging Face Datasets: integrations/huggingface.md
+    - S3 Tables: integrations/s3tables.md
   - Resources:
     - Architecture: resources/architecture.md
     - DataFrame Comparison: resources/dataframe_comparison.md
