--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -28,7 +28,7 @@ pytest-codspeed==2.2.1
 # Testing dependencies
 lxml==5.3.0
 dask[dataframe]==2024.4.1
-numpy==1.26.4
+numpy==1.26.2
 pandas==2.1.3
 xxhash>=3.0.0
 Pillow==10.4.0
@@ -99,4 +99,4 @@ grpcio==1.68.1
 grpcio-status==1.67.0
 
 # ai
-vllm
+vllm>=0.7.3
