--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,87 @@
 build-backend = "maturin"
 requires = ["maturin>=1.5.0,<2.0.0"]
 
+[dependency-groups]
+dev = [
+  "ipdb",
+  "maturin",
+  "pre-commit",
+  "docker",
+  "importlib-metadata",
+  "requests<2.32.0",
+  "httpx==0.27.2",
+  "orjson==3.10.12",
+  "py-spy==0.3.14",
+  "viztracer==0.15.6",
+  "hypothesis==6.79.2",
+  "pytest==7.4.3",
+  "pytest-benchmark==4.0.0",
+  "pytest-cov==4.1.0",
+  "pytest-lazy-fixture==0.6.3",
+  "memray==1.13.4; platform_system != \"Windows\"",
+  "pytest-codspeed==2.2.1",
+  "lxml==5.3.0",
+  "dask[dataframe]==2024.4.1",
+  "numpy==1.26.2",
+  "pandas==2.1.3",
+  "xxhash>=3.0.0",
+  "Pillow==10.4.0",
+  "opencv-python==4.10.0.84",
+  "tiktoken==0.7.0",
+  "duckdb==1.1.2",
+  "tqdm",
+  "pyarrow==16.0.0",
+  "ray[data, client]==2.34.0",
+  "pylance>=0.10.12",
+  "pyiceberg==0.7.0",
+  "tenacity==8.2.3",
+  "deltalake==0.5.8; platform_system == \"Windows\"",
+  "deltalake==0.19.2; platform_system != \"Windows\"",
+  "databricks-sdk==0.12.0",
+  "unitycatalog==0.1.1",
+  "sqlalchemy==2.0.36",
+  "connectorx==0.2.3; platform_system == \"Linux\" and platform_machine == \"aarch64\"",
+  "connectorx==0.3.3; platform_system != \"Linux\" or platform_machine != \"aarch64\"",
+  "trino[sqlalchemy]==0.328.0",
+  "PyMySQL==1.1.0",
+  "psycopg2-binary==2.9.10",
+  "sqlglot==23.3.0",
+  "pyodbc==5.1.0",
+  "s3fs==2023.12.0",
+  "boto3==1.36.20",
+  "boto3-stubs[essential,s3,s3tables]==1.36.20",
+  "moto[s3,server]==5.1.1",
+  "adlfs==2024.7.0",
+  "azure-storage-blob==12.24.0",
+  "gcsfs==2023.12.0",
+  "myst-nb>=0.16.0",
+  "Sphinx==5.3.0",
+  "sphinx-book-theme==1.1.0",
+  "sphinx-reredirects>=0.1.1",
+  "sphinx-copybutton>=0.5.2",
+  "sphinx-autosummary-accessors==2023.4.0",
+  "sphinx-tabs==3.4.5",
+  "pyspark==3.5.3",
+  "grpcio==1.68.1",
+  "grpcio-status==1.67.0"
+]
+docs = [
+  "myst-nb>=0.16.0",
+  "Sphinx==5.3.0",
+  "sphinx-book-theme==1.1.0",
+  "sphinx-reredirects>=0.1.1",
+  "sphinx-copybutton>=0.5.2",
+  "sphinx-autosummary-accessors==2023.4.0",
+  "sphinx-tabs==3.4.5",
+  "markdown-exec",
+  "mkdocs-jupyter",
+  "mkdocs-material",
+  "mkdocs-macros-plugin",
+  "mkdocs-simple-hooks",
+  "pymdown-extensions",
+  "mkdocs-material[imaging]"
+]
+
 [project]
 authors = [{name = "Eventual Inc", email = "daft@eventualcomputing.com"}]
 dependencies = [
@@ -97,9 +178,6 @@ root = ".github/ci-scripts"
 [[tool.pyright.executionEnvironments]]
 root = "tools"
 
-[[tool.pyright.executionEnvironments]]
-root = "daft_dashboard"
-
 [tool.pytest.ini_options]
 addopts = "-m 'not (integration or benchmark or hypothesis)'"
 minversion = "6.0"
@@ -107,8 +185,5 @@ testpaths = [
   "tests"
 ]
 
-[tool.uv.sources.daft_dashboard]
-workspace = true
-
-[tool.uv.workspace]
-members = ["daft_dashboard"]
+[tool.uv]
+default-groups = ["dev", "docs"]
