--- a/.github/workflows/property-based-tests.yml
+++ b/.github/workflows/property-based-tests.yml
@@ -39,8 +39,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install --upgrade pip
-        pip install -r requirements-dev.txt
+        uv sync --no-install-project
     - uses: oven-sh/setup-bun@v2
       with:
         bun-version: latest
